--- a/res/layout/activity_list_office.xml
+++ b/res/layout/activity_list_office.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -9,10 +10,12 @@
         android:layout_height="match_parent"
         class="com.google.android.gms.maps.SupportMapFragment" />
 
+    <!-- Button bottom -->
     <LinearLayout
+        android:id="@+id/llobutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_margin="10dp"
         android:orientation="horizontal" >
 
@@ -21,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:layout_weight="1"
-            android:background="@drawable/st_btn_nocolor_blue_left"
+            android:background="@drawable/st_btn_red_left"
             android:text="Văn phòng"
             android:textColor="@drawable/st_textcolor_red_white"
             android:textSize="@dimen/textsize14"
@@ -39,11 +42,23 @@
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:layout_weight="1"
-            android:background="@drawable/st_btn_nocolor_blue_right"
+            android:background="@drawable/st_btn_red_right"
             android:text="Phòng khám"
             android:textColor="@drawable/st_textcolor_red_white"
             android:textSize="@dimen/textsize14"
             android:textStyle="bold" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imvMyLocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:padding="5dp"
+        android:visibility="gone"
+        android:layout_marginBottom="40dp"
+        android:layout_marginRight="10dp"
+        android:src="@drawable/ic_my_location_black_24dp" />
 
 </RelativeLayout>
