--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -2,9 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_logout"
+        android:id="@+id/action_call"
         android:orderInCategory="100"
-        android:title="@string/action_logout"
-        android:visible="false"
-        app:showAsAction="never" />
+        android:title="@string/action_call"
+        android:visible="true"
+        android:icon="@drawable/ic_call_white_24dp"
+        app:showAsAction="always" />
 </menu>
