--- a/res/layout/activity_profile.xml
+++ b/res/layout/activity_profile.xml
@@ -53,15 +53,65 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/designation"
+                    android:id="@+id/tvMaKhachHang"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvName"
-                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentLeft="true"
                     android:layout_marginTop="5dp"
+                    android:layout_marginLeft="15dp"
                     android:text="Mã số khách hàng: 00075634"
                     android:textColor="#fff"
                     android:textSize="18sp" />
+                
+                <TextView
+                    android:id="@+id/tvSoHopDong"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvMaKhachHang"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="15dp"
+                    android:text="Số hợp đồng : 3"
+                    android:textColor="#fff"
+                    android:textSize="16sp" />
+                
+                <TextView
+                    android:id="@+id/tvTongGiaTri"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvSoHopDong"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="15dp"
+                    android:text="Tổng giá trị hợp đồng : 1,200,000,000 VND"
+                    android:textColor="#fff"
+                    android:textSize="16sp" />
+                
+                <TextView
+                    android:id="@+id/tvDiemThuong"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvTongGiaTri"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="15dp"
+                    android:text="Điểm thưởng : 1,200"
+                    android:textColor="#fff"
+                    android:textSize="16sp" />
+                
+                <TextView
+                    android:id="@+id/tvDiachi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvDiemThuong"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="Địa chỉ : 134 Bắc Hải, q.10, TP.HCM"
+                    android:textColor="#fff"
+                    android:textSize="16sp" />
             </RelativeLayout>
 
             <LinearLayout
@@ -109,7 +159,7 @@
         </RelativeLayout>
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/profile_layout"
             android:layout_marginTop="5dp"
@@ -122,6 +172,7 @@
                 android:background="#fff"
                 android:clickable="true"
                 android:elevation="4dp"
+                android:visibility="gone"
                 android:padding="20dp"
                 android:text="Android Profile UI Design" />
 
@@ -132,42 +183,13 @@
                 android:layout_marginBottom="3dp"
                 android:layout_marginTop="3dp"
                 android:background="#fff"
+                android:visibility="gone"
                 android:clickable="true"
                 android:elevation="4dp"
                 android:padding="20dp"
                 android:text="Android Profile XMl UI Design" />
 
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:background="#fff"
-                android:clickable="true"
-                android:elevation="4dp"
-                android:padding="20dp"
-                android:text="Android Profile UI Design" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_marginBottom="3dp"
-                android:layout_marginTop="3dp"
-                android:background="#fff"
-                android:clickable="true"
-                android:elevation="4dp"
-                android:padding="20dp"
-                android:text="Android Profile XMl UI Design" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:background="#fff"
-                android:clickable="true"
-                android:elevation="4dp"
-                android:padding="20dp"
-                android:text="Android Profile UI Design" />
+            
         </LinearLayout>
     </LinearLayout>
 
