--- a/res/layout/item_notification.xml
+++ b/res/layout/item_notification.xml
@@ -2,43 +2,42 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@drawable/st_bg_layout"
     android:elevation="3dp"
     android:orientation="vertical"
+    android:layout_margin="2dp"
     android:padding="10dp" >
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tvStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/state_btn_page_home"
+        android:gravity="center"
+        android:text="new"
+        android:textColor="@color/white"
+        android:textSize="@dimen/textsize10"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tvName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:layout_marginTop="10dp"
+        android:text="Nguyen van A"
+        android:textColor="@color/black"
+        android:textSize="14sp" />
 
-        <TextView
-            android:id="@+id/tvStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="5dp"
-            android:textColor="@color/white"
-            android:background="@drawable/state_btn_page_home"
-            android:text="new"
-            android:textSize="@dimen/textsize12" />
-
-        <TextView
-            android:id="@+id/tvName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nguyen van A"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/tvDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:gravity="right"
-            android:text="2017/2/3"
-            android:textSize="@dimen/textsize12" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tvDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvName"
+        android:layout_marginTop="5dp"
+        android:gravity="right"
+        android:text="2017/2/3"
+        android:textSize="@dimen/textsize12" />
 
 </RelativeLayout>
