--- a/res/layout/nav_header_main.xml
+++ b/res/layout/nav_header_main.xml
@@ -122,7 +122,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tvTongGiaTri"
                     android:layout_centerHorizontal="true"
-                    android:text="GTHĐ "
+                    android:text="Tổng giá trị HĐ "
                     android:textSize="12sp" />
             </RelativeLayout>
 
